UF-9863: Add municipalityId
