# src/main/java/se/sundsvall/installation/api/InstallationResource.java
@@ -4,31 +4,32 @@ import static org.springframework.http.MediaType.APPLICATION_JSON_VALUE;
 import static org.springframework.http.MediaType.APPLICATION_PROBLEM_JSON_VALUE;
 import static org.springframework.http.ResponseEntity.ok;
 
-import jakarta.validation.Valid;
-
 import org.springdoc.core.annotations.ParameterObject;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 import org.zalando.problem.Problem;
 import org.zalando.problem.violations.ConstraintViolationProblem;
 
-import se.sundsvall.installation.api.model.InstallationsResponse;
-import se.sundsvall.installation.api.model.SearchParameters;
-import se.sundsvall.installation.service.InstallationService;
-
 import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.media.Content;
 import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
+import jakarta.validation.Valid;
+import se.sundsvall.dept44.common.validators.annotation.ValidMunicipalityId;
+import se.sundsvall.installation.api.model.InstallationsResponse;
+import se.sundsvall.installation.api.model.SearchParameters;
+import se.sundsvall.installation.service.InstallationService;
 
 @RestController
 @Validated
-@RequestMapping("/installations")
+@RequestMapping("/{municipalityId}/installations")
 @Tag(name = "Installation")
 class InstallationResource {
 
@@ -38,18 +39,18 @@ class InstallationResource {
 		this.installationService = installationService;
 	}
 
-	@Operation(summary = "Get uninstalled installations",
-		description = "Resource returns all installations matching provided search parameters")
+	@Operation(summary = "Get uninstalled installations", description = "Resource returns all installations matching provided search parameters")
 	@ApiResponses(value = {
 		@ApiResponse(responseCode = "200", description = "Successful operation", useReturnTypeSchema = true),
-		@ApiResponse(responseCode = "400", description = "Bad request", content = @Content(mediaType = APPLICATION_PROBLEM_JSON_VALUE, schema = @Schema(oneOf = {Problem.class, ConstraintViolationProblem.class}))),
+		@ApiResponse(responseCode = "400", description = "Bad request", content = @Content(mediaType = APPLICATION_PROBLEM_JSON_VALUE, schema = @Schema(oneOf = { Problem.class, ConstraintViolationProblem.class }))),
 		@ApiResponse(responseCode = "500", description = "Internal Server error", content = @Content(mediaType = APPLICATION_PROBLEM_JSON_VALUE, schema = @Schema(implementation = Problem.class))),
 		@ApiResponse(responseCode = "502", description = "Bad Gateway", content = @Content(mediaType = APPLICATION_PROBLEM_JSON_VALUE, schema = @Schema(implementation = Problem.class)))
 	})
-	@GetMapping(produces = {APPLICATION_JSON_VALUE, APPLICATION_PROBLEM_JSON_VALUE})
+	@GetMapping(produces = { APPLICATION_JSON_VALUE, APPLICATION_PROBLEM_JSON_VALUE })
 	public ResponseEntity<InstallationsResponse> getInstallations(
+		@Parameter(name = "municipalityId", description = "Municipality id", example = "2281") @ValidMunicipalityId @PathVariable final String municipalityId,
 		@Valid @ParameterObject final SearchParameters searchParameters) {
-		return ok(installationService.getInstallations(searchParameters));
-	}
 
+		return ok(installationService.getInstallations(municipalityId, searchParameters));
+	}
 }
